objects/Production__c.object
<CustomObject>
    <description>Used to track individual instances of certain products. Currently only applies to Websites and Haystak. Future plans to apply to Inventories as well.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productions</relationshipLabel>
        <relationshipName>Productions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <inlineHelpText>This is for future delivery dates.</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Received_Date__c</fullName>
        <inlineHelpText>For projects without an opportunity, use the Project&apos;s Created Date. Otherwise, use the opp&apos;s Paid Date.</inlineHelpText>
        <label>Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Website - VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Website (ATC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Website Gold (ATC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <recordTypes>
        <fullName>Haystak</fullName>
        <active>true</active>
        <description>Used to keep track of Haystak services on this account.</description>
        <label>Haystak</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website</fullName>
        <active>true</active>
        <description>Used for tracking individual websites on this account.</description>
        <label>Website</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>